# rss-tui

./: .env  Cargo.toml  README.md
src/: main.rs  rss_funcs.rs  telegram_funcs.rs
