[package]
name = "rss-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30.0"
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"
rss = "2.0.12"
html-escape = "0.2.13"
textwrap = "0.16.1"
grammers-client = "0.8.0"
grammers-session = "0.8.0"
grammers-mtsender = "0.8.0"
anyhow = "1.0"
dotenvy = "0.15"
futures = "0.3.31"
google-gmail1 = "5.0.4"
google-secretmanager1 = "5.0.4" # Optional, but common for creds
yup-oauth2 = "9.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = { version = "0.24", features = ["native-tokio", "http1"] }
